--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -379,9 +379,9 @@ box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.25);}
 
 .testimoouter h2 span {color:#cd0b0b;}
 
-.testimoarea .previous {display:block; left:0px; opacity:1; width:17px; height:50px; margin:110px 0 0 -12px; background:url(/assets/test_prev.png) left top no-repeat; font-size:0; position:absolute; z-index:9;}
+.testimoarea .previous {display:block; left:0px; opacity:1; width:17px; height:50px; margin:110px 0 0 -12px; background:url(/assets/prev.png) left top no-repeat; font-size:0; position:absolute; z-index:9;}
 
-.testimoarea .next {display:block; right:0px; opacity:1; width:17px; height:50px; margin:110px -12px 0 0; background:url(/assets/test_next.png) left top no-repeat; font-size:0; position:absolute; z-index:9;}
+.testimoarea .next {display:block; right:0px; opacity:1; width:17px; height:50px; margin:110px -12px 0 0; background:url(/assets/next.png) left top no-repeat; font-size:0; position:absolute; z-index:9;}
 
 .testimoarea figure {position:relative; display:block; min-height:270px; padding:0px 0px; background:transparent;}
 
