--- a/app/views/layouts/shared/_slider.html.erb
+++ b/app/views/layouts/shared/_slider.html.erb
@@ -3,11 +3,12 @@
 				<div class="flexslider">
 				          <ul class="slides">
 				            	<li>
-				  	    	    	<%= image_tag('slider_1.jpg')%>
+				  	    	    	<%= image_tag('banner-1.jpg')%>
                                     <div class="banouter">
                                        <div class="bandescout">
                                         	<div class="container">
                                             	<div class="row">
+                                              <!--
                                                   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
                                                       <h2>Honest Weight Loss </h2>
                                                       <h3>THROUGH WISE NUTRITION </h3>
@@ -16,18 +17,19 @@
                                                       <h4><span>II</span> Mentoring </h4>
                                                       <div class="btnarea"><a href="#">READ MORE</a></div>
                                                   </div>
+                                                  -->
                                               </div>
                                            </div>
                                         </div>
                                       </div>	
 				  	    		</li>
 				  	    		<li>
-				  	    			<%= image_tag('slider_2.jpg')%>
-				  	    	    	<!--<img src="images/slider_2.jpg" alt="slider2" /> -->
+				  	    			<%= image_tag('banner-2.jpg')%>
                                     <div class="banouter">
                                        <div class="bandescout">
                                         	<div class="container">
                                             	<div class="row">
+                                              <!--
                                                   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
                                                       <h2>Honest Weight Loss </h2>
                                                       <h3>THROUGH WISE NUTRITION </h3>
@@ -35,6 +37,7 @@
                                                       <h4><span>II</span> Super Food Kits  </h4>
                                                       <div class="btnarea"><a href="#">READ MORE</a></div>
                                                   </div>
+                                                  -->
                                               </div>
                                            </div>
                                         </div>
