--- a/app/views/layouts/shared/_testimonials.html.erb
+++ b/app/views/layouts/shared/_testimonials.html.erb
@@ -11,8 +11,11 @@
                          <div class="gallery gallery-01 crsl-items" data-navigation="nav-01" style="margin-top:-10px">
                              <div class="crsl-wrap">
                                                     <figure class="crsl-item">
-                                                            <p><span>"</span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <span>"</span></p>
-                                                            <h3>~  &nbsp; Lorem Ipsum is simply &nbsp;  ~</h3>
+                                                            <p><span>"</span>
+
+I have lost my 10 Kgs of weight in just 3 months. It gives me confidence. Thanks Dietian Karishma!
+                                                             <span>"</span></p>
+                                                            <h3>~  &nbsp; Varsha Mariswamy &nbsp;  ~</h3>
                                                             <div class="testimoimgarea">
                                                             <%= image_tag('client_pic1.jpg') %>	
                                                             </div>
@@ -20,17 +23,8 @@
                                                 </div>
                              <div class="crsl-wrap">
                                                     <figure class="crsl-item">
-                                                            <p><span>"</span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <span>"</span></p>
-                                                            <h3>~  &nbsp; Lorem Ipsum is simply &nbsp;  ~</h3>
-                                                            <div class="testimoimgarea">
-                                                            <%= image_tag('client_pic1.jpg') %>	
-                                                            </div>
-                                                    </figure>
-                                                </div>
-                             <div class="crsl-wrap">
-                                                    <figure class="crsl-item">
-                                                            <p><span>"</span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <span>"</span></p>
-                                                            <h3>~  &nbsp; Lorem Ipsum is simply &nbsp;  ~</h3>
+                                                            <p><span>"</span>In Dietian Karishma's guidence I have lose 6 Kgs of weight in 2 months. Thanks a lot for your help Dietitian. <span>"</span></p>
+                                                            <h3>~  &nbsp; Anup &nbsp;  ~</h3>
                                                             <div class="testimoimgarea">
                                                             <%= image_tag('client_pic1.jpg') %>	
                                                             </div>
