--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -132,6 +132,8 @@ box-shadow: 0px 0px 3px 0px rgba(50, 50, 50, 0.55);}
 
 .loginregarea li a {color:#ffffff; font-size:13px; line-height:16px;}
 
+.loginregarea li span {color:#ffffff; font-size:13px; line-height:16px;}
+
 .loginregarea li a:hover {text-decoration:underline;}
 
 nav {text-align:center;}
@@ -210,7 +212,7 @@ nav {text-align:center;}
 *********************************/ 
 .flexslider {margin: 0; padding: 0;}
 .flexslider .slides > li {display: none; -webkit-backface-visibility:hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
-.flexslider .slides img {width:100%; height:auto; display: block; margin:0 0; padding:0 0;}
+.flexslider .slides img {width:100%; height:465px; display: block; margin:0 0; padding:0 0;}
 
 .flex-pauseplay span {text-transform: capitalize;}
 
