--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,10 +3,16 @@
      <div class="row">
        <div class="col-xs-12 col-sm-12 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
           <div class="regarea">
-            <h2>Login </h2>
+            <h2>Sign Up </h2>
             <div class="regform">
               <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-                <%= devise_error_messages! %>    
+              <% if flash.present? %>
+                <div class="alert alert-danger alert-dismissable">
+                  <%- flash.each do |name, msg| -%>
+                    <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
+                  <%- end -%>
+                </div>
+              <%end%>   
                 <%= f.label :email, class: "control-label", style: "float:left; font-size:20px;" %><br />
                 <%= f.email_field :email, autofocus: true%>
                 <br><br>
@@ -21,7 +27,7 @@
                 <%= f.label :password_confirmation, class: "control-label", style: "float:left; font-size:20px;" %>
                 <%= f.password_field :password_confirmation, autocomplete: "off" %>
 
-                <%= f.submit "Log in", class: "subbtn" %>
+                <%= f.submit "Sign Up", class: "subbtn" %>
                 <p>Already have an account? </p>
                 <%= render "devise/shared/links" %>
                 <% end %>
