--- a/app/views/layouts/shared/_services.html.erb
+++ b/app/views/layouts/shared/_services.html.erb
@@ -9,8 +9,8 @@
                                 <div class="percircleouter"><div class="percircle">
                                 <%= image_tag('service_pic1.jpg')%>
                                 </div></div>
-                                <h4>WEight Loss </h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                <h4>Weight Loss </h4>
+                                <!--<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>-->
                                 <span>READ MORE </span>
                             </a>
                   	   </div>
@@ -22,7 +22,7 @@
                                 </div>
                                 </div>	
                                 <h4>Pregnancy Diet </h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                <!--<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>-->
                                 <span>READ MORE </span>
                             </a>
                   	   </div>
@@ -32,7 +32,7 @@
                                 	<%= image_tag('service_pic3.jpg') %>
                                 </div></div>
                                 <h4>Blood Pressure care </h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                <!--<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>-->
                                 <span>READ MORE </span>
                             </a>
                   	   </div>
@@ -42,7 +42,7 @@
                                 <%= image_tag('service_pic4.jpg') %>
                                 </div></div>
                                 <h4>diabetic diet </h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                <!--<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>-->
                                 <span>READ MORE </span>
                             </a>
                   	   </div>
@@ -51,8 +51,8 @@
                                 <div class="percircleouter"><div class="percircle">
                                 <%= image_tag('service_pic5.jpg') %>
                                 </div></div>
-                                <h4>Health snacks </h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                <h4>Healthy Diet for Senior Citizens </h4>
+                                <!--<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>-->
                                 <span>READ MORE </span>
                             </a>
                   	   </div>
@@ -61,8 +61,9 @@
                                 <div class="percircleouter"><div class="percircle">
                                 <%= image_tag('service_pic6.jpg') %>
                                 </div></div>
-                                <h4>fitness & exercise </h4>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                <h4>Weight Gain Program </h4>
+                                <!--<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                -->
                                 <span>READ MORE </span>
                             </a>
                   	   </div>                            
