--- a/app/views/layouts/shared/_services_page.html.erb
+++ b/app/views/layouts/shared/_services_page.html.erb
@@ -1,8 +1,7 @@
-<div class="boxarea">
+<div class="boxarea_services">
    <div class="container">
         <div class="row">
            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
-               <h2>Services <strong>Offered</strong></h2>
                <div class="row">
                    		<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                        		<a href="#" class="percirclearea">
@@ -10,7 +9,7 @@
                                 <%= image_tag('service_pic1.jpg')%>
                                 </div></div>
                                 <h4>Weight Loss </h4>
-                                <span>READ MORE </span>
+                                <span class='details'>READ MORE</span> 
                             </a>
                   	   </div>
                    	   <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
@@ -57,8 +56,6 @@
                                 <%= image_tag('service_pic6.jpg') %>
                                 </div></div>
                                 <h4>Weight Gain Program </h4>
-                                <!--<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                                -->
                                 <span>READ MORE </span>
                             </a>
                   	   </div>                            
