--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -16,19 +16,7 @@
 
 <body>
     
-<div class="regpghdr">
-  <div class="topbar">
-     <div class="container">
-     	   <div class="row">
-            <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3"> 
-                  <div class="logo">
-                      <%= link_to image_tag("logo.png"), root_path %>
-                  </div>
-            </div>
-         </div>
-      </div>
-  </div>
-</div>
+<%= render '/layouts/shared/header'%>
  
 <%= yield %>
 
