--- a/app/views/layouts/shared/_header.html.erb
+++ b/app/views/layouts/shared/_header.html.erb
@@ -40,34 +40,43 @@
   </div>
   <div class="container">
      <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-9 col-md-offset-3 col-lg-9 col-lg-offset-3">      
-                  <nav>
-                        <div class="navbar navbar-default">
-                              <div class="navbar-header">
-                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                                  <span class="sr-only">Main navigation</span>
-                                  <span class="icon-bar"></span>
-                                  <span class="icon-bar"></span>
-                                  <span class="icon-bar"></span>
-                                </button>
-                              </div>
-                              <div id="navbar" class="navbar-collapse collapse">
-                                    <div class="nav navbar-nav">
-                                       <div>
-                                          <ul>
-                                             <li class="selected"><a href="#">HOME </a></li>            
-                                             <li><a href="#">ABOUT  WISE NUTRITION </a></li>           
-                                             <li><a href="#">SUCCESS STORIES </a></li>           
-                                             <li><a href="#">SUPER FOODS </a></li>            
-                                             <li><a href="#">Blog </a></li>           
-                                             <li><a href="#">CONTACT </a></li>         
-                                          </ul>
-                                       </div>
-                                    </div>
-                              </div><!--/.nav-collapse -->
-                        </div>
-                  </nav>
-            </div>
+        <div class="col-xs-12 col-sm-12 col-md-9 col-md-offset-3 col-lg-9 col-lg-offset-3">      
+              <nav>
+                <div class="navbar navbar-default">
+                  <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                      <span class="sr-only">Main navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
+                  </div>
+                  <div id="navbar" class="navbar-collapse collapse">
+                    <div class="nav navbar-nav">
+                       <div>
+                          <ul>
+                             <li class="<%= selected_menu(controller, 'home')%>">
+                                <%= link_to "Home", root_path %>
+                             </li>            
+                             <li class="<%= selected_menu(controller, 'about')%>">
+                                <%= link_to "ABOUT US", about_path %>
+                              </li>           
+                             <li class="<%= selected_menu(controller, 'online')%>">
+                                <%= link_to "Online Consultation", nutritionist_online_path %>
+                             </li>                       
+                            <li class="<%= selected_menu(controller, 'services')%>">
+                                <%= link_to "Services", services_path %>
+                            </li>           
+                            <li class="<%= selected_menu(controller, 'contact')%>">
+                                <%= link_to "CONTACT", contact_path %>
+                            </li>         
+                          </ul>
+                       </div>
+                    </div>
+                  </div><!--/.nav-collapse -->
+                </div>
+              </nav>
+        </div>
      </div>
-</div>
+  </div>
 </div>
