--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,16 +1,19 @@
-<div class="contactarea">
+<div class="contactarea innerpgcont">
   <div class="container">
       <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            </div>
-        </div>
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"></div>
+      </div>
      <div class="row">
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">  
-            <h2>You can GET in TOUCH easily </h2>
-            <p>Just write something in the right side box </p>
-            <div class="map"><img src="images/map.jpg" alt="" /></div>
+          <div class="mainhdarea nosidesp">
+            <h2>Contact Us </h2>
+            <br class="clear" /> 
+            <div class="map"><%= image_tag('map.jpg')%></div>
+          </div>  
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4"> 
+          <div class="mainhdarea nosidesp">
+          <h2>Submit your Query </h2>
            <div class="inputarea"> 
              <form name="contact form" method="post" action="">
               <input type="text" name="name" value="Name" onfocus="if(this.value=='Name')this.value='';" onblur="if(this.value=='')this.value='Name';" />
@@ -20,23 +23,24 @@
               <input type="submit" name="search" value="SEND MESSAGE" />
              </form>
            </div>
+          </div>> 
         </div>
-        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">  
-            <h4>Location Details </h4>
+        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4"> 
+          <div class="mainhdarea nosidesp"> 
+            <!--<h4>Location Details </h4>-->
+            <h2>Location Details </h2>
             <h5>Address:         
-                <span>Lorem Ipsum is simply dummy                 
-                text of the printing and                  
-                typesetting industry </span>
+                <span>D-1007, Prateek Laurel,                 
+                Sector 120,                  
+                NOIDA, U.P., INDIA </span>
             </h5>
             <h5>Telephone:        
-                <span>+01 (91) 1234-5678 </span>
-            </h5>
-            <h5>Fax:                  
-                <span>+01 (91) 1234-5678 </span>
+                <span>+01 (91) 0120-4313709 </span>
             </h5>
             <h5>Website:                  
-                <span><a href="#">http://www.yourwebsite.com </a></span>
+                <span><a href="http://www.wisenutrition.in">http://www.wisenutrition.in </a></span>
             </h5>
+        </div>
         </div>
      </div>
    </div>
