--- a/app/views/home/services.html.erb
+++ b/app/views/home/services.html.erb
@@ -1,25 +1,24 @@
 <div class="innerpgcont">
 	<div class="container">
 		<div class="row">
-        	<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            </div>
-        </div>
-        <div class="row">           
-           <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
-           		<div class="mainhdarea nosidesp">
-           			
-                    <div class="innerslider">
-                    </div>
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"></div>
+    </div>
+    <div class="row">           
+      <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+      		<div class="mainhdarea nosidesp">
+      			
+              <div class="innerslider">
+              </div>
 
-                    <h2>Services Offered</h2>
-                    <%= render '/layouts/shared/services_page'%>
-                    <p></p>
-                    <br class="clear" />        
-           		</div>
-           </div>  
-           <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-           </div>
-        </div>
+              <h2>Services Offered</h2>
+              <%= render '/layouts/shared/services_page'%>
+              <p></p>
+              <br class="clear" />        
+      		</div>
+      </div>  
+      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+      </div>
+      </div>
      </div>
 </div>
 
