--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wise Nutrition </title>
+    <title>Wise Nutrition - Online Diet Clinic By Dietitian Karishma Saxena | Dietetics Expert </title>
+    <meta name="description" content="Dietitian, NOIDA - A dietetic approach to weight loss by one of the best dietician/nutritionists in Noida. Lose weight, diabetes, BP, thyroid, insomnia, stress with healthy diet and nutrition." />
+    <meta property="og:title" content="Wise Nutrition - Online Diet Clinic by Dietitian Karishma Saxena" />
+    <meta property="og:description" content="A dietetic approach to weight loss by an expert dietician/nutritionist. Lose weight, diabetes, BP, thyroid, insomnia, stress with healthy food and nutrition. No medicines!" />
+    <meta property="og:url" content="http://wisenutrition.in/" />
+    <meta property="og:site_name" content="Wise Nutrition - Online Diet Clinic by Dietitian Karishma Saxena" />
+    <meta name="twitter:card" content="summary" />
     <%= csrf_meta_tags %>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">    
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
