--- a/app/views/layouts/shared/_client_header.html.erb
+++ b/app/views/layouts/shared/_client_header.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Welcome, <strong>Anurag</strong></a>
+    <a class="navbar-brand" href="#">Welcome, <strong><%= current_user.email%></strong></a>
     <div></div>
 </div>
 <!-- /.navbar-header -->
@@ -218,7 +218,8 @@
             <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
             </li>
             <li class="divider"></li>
-            <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+            <li>
+                <%= link_to 'Sign Out', destroy_user_session_path, class: "fa fa-sign-out fa-fw" %>
             </li>
         </ul>
         <!-- /.dropdown-user -->
