--- a/app/views/layouts/shared/_client_side_menu.html.erb
+++ b/app/views/layouts/shared/_client_side_menu.html.erb
@@ -16,6 +16,12 @@
                     <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                 </li>
                 <li>
+                    <%= link_to "<i class='fa fa-dashboard fa-fw'></i> Services".html_safe, services_path %>
+                </li> 
+                <li>
+                    <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Blog</a>
+                </li>                                
+                <li>
                     <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
