--- a/app/views/layouts/shared/_services.html.erb
+++ b/app/views/layouts/shared/_services.html.erb
@@ -4,20 +4,24 @@
            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
                <h2>Services <strong>Offered</strong></h2>
                <div class="row">
-                   		<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                       		<a href="#" class="percirclearea">
-                                <div class="percircleouter"><div class="percircle">
-                                <%= image_tag('service_pic1.jpg')%>
-                                </div></div>
-                                <h4>Weight Loss </h4>
-                                <span>READ MORE </span>
-                            </a>
-                  	   </div>
+                 <% @services.each do |service| %>
+                    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                        <a href="#" class="percirclearea">
+                              <div class="percircleouter"><div class="percircle">
+                              <%#= image_tag('service_pic1.jpg')%>
+                              <%= image_tag service.picture.url(:medium) %>
+                              </div></div>
+                              <h4><%= service.title%> </h4>
+                              <span class='details'>READ MORE</span> 
+                          </a>
+                     </div>
+                   <% end %>
+                       <!--
                    	   <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                        		<a href="#" class="percirclearea">
                                 <div class="percircleouter">
                                 <div class="percircle">
-                                	<%= image_tag('service_pic2.jpg') %>
+                                	<%#= image_tag('service_pic2.jpg') %>
                                 </div>
                                 </div>	
                                 <h4>Pregnancy Diet </h4>
@@ -27,7 +31,7 @@
                        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                        		<a href="#" class="percirclearea">
                                 <div class="percircleouter"><div class="percircle">
-                                	<%= image_tag('service_pic3.jpg') %>
+                                	<%#= image_tag('service_pic3.jpg') %>
                                 </div></div>
                                 <h4>Blood Pressure care </h4>
                                 <span>READ MORE </span>
@@ -36,7 +40,7 @@
                    		<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                        		<a href="#" class="percirclearea">
                                 <div class="percircleouter"><div class="percircle">
-                                <%= image_tag('service_pic4.jpg') %>
+                                <%#= image_tag('service_pic4.jpg') %>
                                 </div></div>
                                 <h4>diabetic diet </h4>
                                 <span>READ MORE </span>
@@ -45,7 +49,7 @@
                    	   <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                        		<a href="#" class="percirclearea">
                                 <div class="percircleouter"><div class="percircle">
-                                <%= image_tag('service_pic5.jpg') %>
+                                <%#= image_tag('service_pic5.jpg') %>
                                 </div></div>
                                 <h4>Healthy Diet for Senior Citizens </h4>
                                 <span>READ MORE </span>
@@ -54,14 +58,13 @@
                        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                        		<a href="#" class="percirclearea">
                                 <div class="percircleouter"><div class="percircle">
-                                <%= image_tag('service_pic6.jpg') %>
+                                <%#= image_tag('service_pic6.jpg') %>
                                 </div></div>
                                 <h4>Weight Gain Program </h4>
-                                <!--<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                                -->
                                 <span>READ MORE </span>
                             </a>
-                  	   </div>                            
+                  	   </div>  
+                       -->                          
                </div>
            </div>
         </div>
