--- a/app/views/layouts/shared/_services_page.html.erb
+++ b/app/views/layouts/shared/_services_page.html.erb
@@ -3,20 +3,23 @@
         <div class="row">
            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
                <div class="row">
-                   		<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                       		<a href="#" class="percirclearea">
-                                <div class="percircleouter"><div class="percircle">
-                                <%= image_tag('service_pic1.jpg')%>
-                                </div></div>
-                                <h4>Weight Loss </h4>
-                                <span class='details'>READ MORE</span> 
-                            </a>
-                  	   </div>
+                      <% @services.each do |servoce| %>
+                     		<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                         		<a href="#" class="percirclearea">
+                                  <div class="percircleouter"><div class="percircle">
+                                  <%= image_tag('service_pic1.jpg')%>
+                                  </div></div>
+                                  <h4><%= service.title%> </h4>
+                                  <span class='details'>READ MORE</span> 
+                              </a>
+                    	   </div>
+                       <% end %>
+                       <!--
                    	   <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                        		<a href="#" class="percirclearea">
                                 <div class="percircleouter">
                                 <div class="percircle">
-                                	<%= image_tag('service_pic2.jpg') %>
+                                	<%#= image_tag('service_pic2.jpg') %>
                                 </div>
                                 </div>	
                                 <h4>Pregnancy Diet </h4>
@@ -26,7 +29,7 @@
                        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                        		<a href="#" class="percirclearea">
                                 <div class="percircleouter"><div class="percircle">
-                                	<%= image_tag('service_pic3.jpg') %>
+                                	<%#= image_tag('service_pic3.jpg') %>
                                 </div></div>
                                 <h4>Blood Pressure care </h4>
                                 <span>READ MORE </span>
@@ -35,7 +38,7 @@
                    		<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                        		<a href="#" class="percirclearea">
                                 <div class="percircleouter"><div class="percircle">
-                                <%= image_tag('service_pic4.jpg') %>
+                                <%#= image_tag('service_pic4.jpg') %>
                                 </div></div>
                                 <h4>diabetic diet </h4>
                                 <span>READ MORE </span>
@@ -44,7 +47,7 @@
                    	   <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                        		<a href="#" class="percirclearea">
                                 <div class="percircleouter"><div class="percircle">
-                                <%= image_tag('service_pic5.jpg') %>
+                                <%#= image_tag('service_pic5.jpg') %>
                                 </div></div>
                                 <h4>Healthy Diet for Senior Citizens </h4>
                                 <span>READ MORE </span>
@@ -53,12 +56,13 @@
                        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                        		<a href="#" class="percirclearea">
                                 <div class="percircleouter"><div class="percircle">
-                                <%= image_tag('service_pic6.jpg') %>
+                                <%#= image_tag('service_pic6.jpg') %>
                                 </div></div>
                                 <h4>Weight Gain Program </h4>
                                 <span>READ MORE </span>
                             </a>
-                  	   </div>                            
+                  	   </div>
+                       -->                            
                </div>
            </div>
         </div>
