Added servive details page.

--- a/app/views/home/service_details.html.erb
+++ b/app/views/home/service_details.html.erb
@@ -8,14 +8,9 @@
                       <i class="fa fa-medkit" aria-hidden="true"></i>Details
                     </h3>
                     <p>
-                      <%= image_tag('weight-gain.jpg')%>
-                      Do you roll your eyes at the never-ending tips and guides to lose weight every time you open the fitness section of any magazine?
-
-                      Do you need to put on a few kilos to make a sports team, better your health, or simply to bulk up? Most people are out to lose weight, but you can reverse some basic dieting principles to gain some girth. However, many people do not realize how difficult it can be to gain weight quickly. Luckily, gaining weight is fairly intuitive and need not be strenuous or expensive; some basic calculations and lifestyle changes can garner impressive results. <br /><br />
-
-                      And YES! We help you achieve this with our special weight gain diet plan.  <br /><br />
-
-                       </p>
+                      <%#= image_tag('default_service_image.png')%>
+                      <%= @service.description%>
+                    </p>
                     <br class="clear" />
               </div>
            </div>             
@@ -23,13 +18,13 @@
                 <div class="lftlink">                    
                     <h2>Our Services </h2>
                     <ul>
-                      <li>&gt; &nbsp; <a href="#">View All </a></li>
-                      <li class="selected">&gt; &nbsp; <a href="weight-gain-program.html">Weight Gain Program </a></li>
-                      <li>&gt; &nbsp; <a href="#">Lorem Ipsum is simply </a></li>
-                      <li>&gt; &nbsp; <a href="#">dummy text of the printing </a></li>
+                      <% @services.each do |service| %>
+                        <li class=<%= selected(params[:id], service)%>>&gt; &nbsp; <%= link_to service.title, service_detail_path(service) %>
+                        </li>
+                      <% end -%>  
                     </ul>
                 </div>
-                </div>
+            </div>
         </div>
      </div>
 </div>
