--- a/app/views/layouts/shared/_services_page.html.erb
+++ b/app/views/layouts/shared/_services_page.html.erb
@@ -3,7 +3,7 @@
         <div class="row">
            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
                <div class="row">
-                      <% @services.each do |servoce| %>
+                      <% @services.each do |service| %>
                      		<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                          		<a href="#" class="percirclearea">
                                   <div class="percircleouter"><div class="percircle">
