--- a/app/views/home/service_details.html.erb
+++ b/app/views/home/service_details.html.erb
@@ -3,7 +3,7 @@
         <div class="row">           
            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
               <div class="mainhdarea">
-                <h2>Weight Gain Program </h2>
+                <h2><%= @service.title %> </h2>
                     <h3>
                       <i class="fa fa-medkit" aria-hidden="true"></i>Details
                     </h3>
