Added seo related meta keywords.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wise Nutrition - Online Diet Clinic By Dietitian Karishma Saxena | Dietetics Expert </title>
-    <meta name="description" content="Dietitian, NOIDA - A dietetic approach to weight loss by one of the best dietician/nutritionists in Noida. Lose weight, diabetes, BP, thyroid, insomnia, stress with healthy diet and nutrition." />
+    <title>Wise Nutrition - Online Diet Clinic By Dietitian Karishma Saxena | Best Dietitian in Sector 120, Noida |  Online Weight Loss Diet Plans Noida | Famous Weight Loss Nutritionist in Noida </title>
+    
+    <meta name="description" content="Dt. Karishma Saxena is one of the best Nutritionist in Noida, India. Dietitian Karishma has more than 6 years of experience in the field of diet & nutrition. Online diet consultation, personalised diet charts, online customised diet plans are provided for services like: Weight Loss , Healthy Weight Gain, Cholesterol Management Program, Diabetes Management  (Diabetic Diet), Therapeutic Diets, & other disease management." />
+
+    <meta name="keywords" content="Dietician in Delhi NCR Noida, Nutritionist in Noida, Dietitian in Noida, Best Dietician in Noida, Best Nutritionist in Noida. Best Dietitian in Noida, Diet for Noida, Diet for Noida, Weight loss diet, weight gain diet, Diabetic Diet, Weight loss expert, Famous Dietitian in Noida, Famous Nutritionist in Noida, Ghaziabad, Dt. Karishma Saxena" />
+
     <meta property="og:title" content="Wise Nutrition - Online Diet Clinic by Dietitian Karishma Saxena" />
     <meta property="og:description" content="A dietetic approach to weight loss by an expert dietician/nutritionist. Lose weight, diabetes, BP, thyroid, insomnia, stress with healthy food and nutrition. No medicines!" />
     <meta property="og:url" content="http://wisenutrition.in/" />
