Changed seo keywords

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wise Nutrition - Online Diet Clinic By Dietitian Karishma Saxena | Best Dietitian in Sector 120, Noida |  Online Weight Loss Diet Plans Noida | Famous Weight Loss Nutritionist in Noida </title>
+    <title>Best Dietitian in Sector 120 Noida | Online Weight Loss |  Online Weight Loss | Diet Plans Noida | Famous Weight Loss Nutritionist in Noida </title>
     
     <meta name="description" content="Dt. Karishma Saxena is one of the best Nutritionist in Noida, India. Dietitian Karishma has more than 6 years of experience in the field of diet & nutrition. Online diet consultation, personalised diet charts, online customised diet plans are provided for services like: Weight Loss , Healthy Weight Gain, Cholesterol Management Program, Diabetes Management  (Diabetic Diet), Therapeutic Diets, & other disease management." />
 
-    <meta name="keywords" content="Dietician in Delhi NCR Noida, Nutritionist in Noida, Dietitian in Noida, Best Dietician in Noida, Best Nutritionist in Noida. Best Dietitian in Noida, Diet for Noida, Diet for Noida, Weight loss diet, weight gain diet, Diabetic Diet, Weight loss expert, Famous Dietitian in Noida, Famous Nutritionist in Noida, Ghaziabad, Dt. Karishma Saxena" />
+    <meta name="keywords" content="Dietician in Delhi NCR Noida, Nutritionist in Noida, Dietitian in Noida, Best Dietician in Noida, Best Nutritionist in Noida. Best Dietitian in Noida, Diet for Noida, Diet for Noida, Weight loss diet, weight gain diet, Diabetic Diet, Weight loss expert, Famous Dietitian in Noida, Famous Nutritionist in Noida, Dt. Karishma Saxena" />
 
-    <meta property="og:title" content="Wise Nutrition - Online Diet Clinic by Dietitian Karishma Saxena" />
-    <meta property="og:description" content="A dietetic approach to weight loss by an expert dietician/nutritionist. Lose weight, diabetes, BP, thyroid, insomnia, stress with healthy food and nutrition. No medicines!" />
-    <meta property="og:url" content="http://wisenutrition.in/" />
-    <meta property="og:site_name" content="Wise Nutrition - Online Diet Clinic by Dietitian Karishma Saxena" />
-    <meta name="twitter:card" content="summary" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i" rel="stylesheet">    
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
@@ -25,7 +20,7 @@
 </head>
 
 <body>
-
+<!--
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -52,8 +47,7 @@
     </div>
   </div>
 </div>
-
-
+-->
 <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -104,29 +98,27 @@ jQuery(document).ready(function($){
 	    slideshow: true,
 	  });
 
-$('#exampleModal').on('show.bs.modal', function (event) {
-  var button = $(event.relatedTarget) // Button that triggered the modal
-  var recipient = button.data('whatever') // Extract info from data-* attributes
-  // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
-  // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
-  var modal = $(this)
-})
-
-//Google analytics code starts
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-101946177-1', 'auto');
-  ga('send', 'pageview');
-// Google analytics code ends 
+  $('#exampleModal').on('show.bs.modal', function (event) {
+    var button = $(event.relatedTarget) // Button that triggered the modal
+    var recipient = button.data('whatever') // Extract info from data-* attributes
+    // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
+    // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
+    var modal = $(this)
+  })
     
 	});
 </script> 
 
 <script>
- 
+   //Google analytics code starts
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-101946177-1', 'auto');
+    ga('send', 'pageview');
+  // Google analytics code ends 
 </script>
 </body>
 </html>
