Added recent changes

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -490,7 +490,7 @@ box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.25);}
 
 .lftlink {overflow:hidden; padding:0 0; margin:0 0 30px;}
 
-.lftlink h2 {font-size:28px; line-height:38px; font-weight:normal; color:#ffffff; padding:10px 20px; margin:0 0; font-family:'HelveticaNeueLTStd-BdCn'; text-transform:capitalize; background:#333333; border-radius:5px; -o-border-radius:5px; -ms-border-radius:5px; -moz-border-radius:5px; -webkit-border-radius:5px;}
+.lftlink h2 {font-size:28px; line-height:38px; font-weight:normal; color:#ffffff; padding:10px 20px; margin:0 0; font-family:'HelveticaNeueLTStd-BdCn'; background:#333333; border-radius:5px; -o-border-radius:5px; -ms-border-radius:5px; -moz-border-radius:5px; -webkit-border-radius:5px;}
 
 .lftlink ul {list-style-type:none; margin:0 0; padding:0 0 5px;}
 
@@ -612,7 +612,7 @@ box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.25);}
 
 .regform p {font-size:18px; line-height:24px; letter-spacing:1; color:#ffffff; margin:0 0; padding:0 0; font-family:'HelveticaNeueLTStd-LtCn';}
 
-.regform input {width:100%; background:#fcfcfc; color:#666666; font-size:16px; line-height:50px; padding:0 15px; margin:0; border:1px solid #f5b301; text-transform:capitalize; border-radius:3px; -o-border-radius:3px; -ms-border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;}
+.regform input {width:100%; background:#fcfcfc; color:#666666; font-size:16px; line-height:50px; padding:0 15px; margin:0; border:1px solid #f5b301; border-radius:3px; -o-border-radius:3px; -ms-border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;}
 
 .regform input[type="submit"] {width:100%; background:#066889; color:#ffffff; font-size:24px; line-height:46px; padding:0 0; margin:15px 0 25px; border:1px solid #045773; text-transform:uppercase; border-radius:3px; -o-border-radius:3px; -ms-border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px; font-family:'HelveticaNeueLTStd-BdCn';}
 
