--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -9,9 +9,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Nutri Zone</title>
+    <title>Wise Nutrition</title>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag 'application', 'jquery-ui', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'jquery-ui', 'bootstrap',
+                                'responsiveCarousel', 'data-turbolinks-track': 'reload' %>
     <%= csrf_meta_tags %>
 
 </head>
