changed url in services page.

--- a/app/views/home/service_details.html.erb
+++ b/app/views/home/service_details.html.erb
@@ -44,7 +44,7 @@
   </div>
 </div>
 
-<% payment_form_for_payu 'gtKFFx', 'eCwWELxi',
+<%# payment_form_for_payu 'gtKFFx', 'eCwWELxi',
       :txnid => 12343334444222,
       :amount => 10,
       :productinfo => 'Book',
