--- a/app/views/layouts/shared/_services.html.erb
+++ b/app/views/layouts/shared/_services.html.erb
@@ -25,7 +25,7 @@
   $( document ).ready(function() {
     $(".details").click(function(){
       var id = $(this).attr('id');
-      window.location.replace('http://localhost:3000/service_details/'+id)
+      window.location.replace('http://wisenutrition.in/service_details/'+id)
     });
   });
 </script> 
